Prevent `Format` element flickering

--- a/styles/extensions/Format.less
+++ b/styles/extensions/Format.less
@@ -12,6 +12,8 @@
         top: auto; bottom: -@size-format;
         display: flex;
 
+        backface-visibility: hidden;
+
     // -------------------------------------
     //  : `is flipped` modifier
     // -------------------------------------
